<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/system_gray"
    android:orientation="vertical" >

  	<include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="17dp"
        android:paddingRight="17dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acount"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone"
                style="@style/input_box"
                android:cursorVisible="true"
                android:layout_marginLeft="14dp"
                android:hint="@string/hint_acount"
                android:inputType="phone"
                android:paddingLeft="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                style="@style/input_box"
                android:layout_marginLeft="14dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right" >

            <TextView
                android:id="@+id/getpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/orange"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/queding"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>