<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/my_top"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingLeft="90dp" >

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/not_login"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/userstate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/weirenzheng" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >

                    <ImageView
                        android:id="@+id/options"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/shezhi" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#ededed"
                android:orientation="horizontal"
                android:paddingLeft="90dp" >

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/click_right_login"
                    android:textColor="@color/gray" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|right"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/authentication"
                        android:layout_width="112dp"
                        android:layout_height="42dp"
                        android:layout_marginRight="7dp"
                        android:background="@drawable/bt"
                        android:text="@string/Certification"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="64dp"
            android:layout_height="74dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_launcher" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/system_padding"
            android:paddingRight="@dimen/system_padding" >

            <RelativeLayout
                android:id="@+id/commission"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/system_padding"
                android:background="@drawable/ly"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/my_commission"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/Mycommission"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    android:src="@drawable/my_go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/collect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/system_padding"
                android:background="@drawable/ly"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/my_collection"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/Mycollection"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    android:src="@drawable/my_go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/team"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/system_padding"
                android:background="@drawable/ly"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/my_team"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/Myteam"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    android:src="@drawable/my_go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/information"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/system_padding"
                android:background="@drawable/ly"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/my_message"
                    android:gravity="center_vertical"
                    android:drawablePadding="10dp"
                    android:text="@string/Mymessage"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    android:src="@drawable/my_go" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>